2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/Main.java,
	res/drawable-ldpi/filter_icon.png,
	res/drawable-ldpi/refrest_icon.png, res/layout/main.xml: changed the
	style app.

2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml: changed the style app.

2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml, res/layout/options.xml,
	res/values-ja/strings.xml, res/values/strings.xml,
	res/values/styles.xml, res/menu/options_menu_list_events.xml,
	res/menu/options_menu.xml, res/values-es/strings.xml: changed the
	style app.

2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/options.xml,
	res/drawable/edittext_pandora_default_shape.xml,
	res/drawable/edittext_pandora_colors_states.xml,
	res/drawable/edittext_pandora_select_shape.xml,
	res/values/styles.xml: changed the style of options layout.

2013-10-30  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/options.xml, res/values-ja/strings.xml,
	res/values/strings.xml, res/values-es/strings.xml: changed the
	style of app, wip.

2013-10-30  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/values/styles.xml, res/layout/options.xml: I have started to
	set the new style of app (Thanks Carla).

2013-10-30  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java:
	fixed when the data return to call for get events is bad format,
	before it was fails all app, now it tries to get correct event for
	each line.

2012-10-23  Junichi Satoh  <junichi@rworks.jp>

	* res/values-ja/strings.xml: Traslated string "empty".

2012-10-22  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/values-ja/strings.xml: added string "empty" but I can not
	translate into japanese.
	* res/values-es/strings.xml: added string for translate "empty" into
	spanish.

2012-10-22  Miguel de Dios  <miguel.dedios@artica.es>
	