@@ -27,7 +27,7 @@
         android:orientation="horizontal" >
 		
         <ImageButton
-            android:id="@+id/refrest_icon_button"
+            android:id="@+id/refresh_icon_button_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -46,7 +46,7 @@
             android:textStyle="bold" />
 
         <ImageButton
-            android:id="@+id/filter_icon_button"
+            android:id="@+id/filter_icon_button_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
