@@ -1,3 +1,11 @@
+2013-11-01  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* src/pandroid_event_viewer/pandorafms/EventList.java,
+	src/pandroid_event_viewer/pandorafms/Main.java,
+	src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java,
+	res/layout/list_view_layout.xml, res/layout/main.xml: changes in the
+	theme of app.
+
 2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* src/pandroid_event_viewer/pandorafms/Main.java,
